<resources>

    <string name="app_name">Sensors</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_accelerometer">Accelerometer</string>
    <string name="button_gravity">Gravity</string>
    <string name="button_linear">Linear Acceleration</string>
    <string name="button_gyroscope">Gyroscope</string>
    <string name="button_rotation">Rotation Vector</string>
    <string name="button_view">View</string>
    <string name="title_activity_accelerometer">AccelerometerActivity</string>

</resources>