<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioGroup
        android:id="@+id/sensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <RadioButton
            android:id="@+id/accelerometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/button_accelerometer" />

        <RadioButton
            android:id="@+id/gravity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_gravity" />

        <RadioButton
            android:id="@+id/gyroscope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_gyroscope" />

        <RadioButton
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_linear" />

        <RadioButton
            android:id="@+id/rotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_rotation" />

    </RadioGroup>

    <Button
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="viewClick"
        android:text="@string/button_view" />

</RelativeLayout>
